1999-03-09  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* defobj.m: Remove import FCall.h
	(_defobj_initialize): Remove init_javacall_tables.

	* Makefile.am (defobj_HEADERS): Remove FCall.h
	(SRC): Remove FCall.m

	* FCall.h: If Java available then include jni.h.
	Import Create.h

	* Makefile.am (SRC): Add FCall.m to SRC variable.
	(defobj_HEADERS): Add FCall.h to defobj_HEADERS.

	* defobj.m: Include FCall.h for init_javacall_tables definition.
	(_defobj_initialize): If Java is enabled call init_javacall_tables.

	* FCall.m (init_javacall_tables): Rename init_java to 
	init_javacall_tables.

	* FCall.h: Rename init_java to init_javacall_tables.

	* FCall.m (init_java): Remove JNI initialization from init_java.
	([FCall -setCallType:cType]): Use switch instead of if else.
	([FCall -setNumberOfArguments:number]): Likewise.
	([FCall -addArgument:value:type]): Likewise.

	* FCall.h: Insert contents of swarm_types.h in FCall.h 

	* swarm_types.h: Remove file. 

1999-03-05  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* swarm_types.h: New file. 

	* FCall.h: New file.

	* FCall.m: New file.
	

1999-02-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* defobj.h: Put all setters needed for createEnd to creating
	phase.  Remove duplicate setAppModeString: in setting.

1999-02-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Archiver.m ([Archiver_c -hdf5LoadObjectMap:key:],
	[Archiver_c -hdf5LoadArchiver:]): Return self.
	
1999-02-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* defobj.m (initDefobj): Call setSystemArchiverFlag: YES for
	hdf5Archiver and lispArchiver.

	* DefObject.m (lisp_output_type): Make buf larger.  Print empty/ignored
	object as #f instead of nil.

	* Archiver.m (lisp_output_objects): Add systemArchiverFlag
	argument (used to adjust indentation).  Generate EOL at the
	end of the loop instead of beginning. 
	(lisp_output_app_objects): New function.
	([Archiver_c -_lispOut_:]): Use it.